--- a/app/modules/investwithdraw/views/investStep1.html
+++ b/app/modules/investwithdraw/views/investStep1.html
@@ -25,7 +25,7 @@
 							<div class="th">
 								<p>Goal</p>
 							</div>
-							<div class="th">
+							<div class="th hidden-xs">
 								<p>Expected Corpus</p>
 							</div>
 							<div class="th">
@@ -45,7 +45,7 @@
 								<div class="td">
 									<p>{{schemes.goal_summary.goal}}</p>
 								</div>
-								<div class="td">
+								<div class="td hidden-xs">
 									<p><span class="currency">&#8377;</span><span>{{schemes.goal_summary.corpus | amountSeffix}}</span></p>
 								</div>
 								<div class="td">
