--- a/app/modules/planinvestment/modules/quickInvest/views/quickInvestStart.html
+++ b/app/modules/planinvestment/modules/quickInvest/views/quickInvestStart.html
@@ -12,7 +12,7 @@
             <input type="radio" required id="option1Type1" name="option1" ng-model="$root.selectedCriteria" value="op1"><label for="option1Type1"><span></span>I want to make monthly investments (SIP)</label>
             <input type="radio" required id="option1Type2" name="opoption1Tion1" ng-model="$root.selectedCriteria" value="op2"><label for="option1Type2"><span></span>I want to make a one-time investment (Lumpsum)</label>
         </div>
-        <div class="col-xs-12">
+        <div class="col-xs-12 col-lg-5 col-md-7">
             <div class="row">
                 <div class="fin-btn-cover started">
                     <div class="fin-btn-group">
