--- a/app/modules/registerinvestor/views/registerInvestorConfirmation.html
+++ b/app/modules/registerinvestor/views/registerInvestorConfirmation.html
@@ -62,7 +62,7 @@
         <p>Investor Registration</p>
     </div>
 
-    <div class="col-xs-12">
+    <div class="col-xs-12 col-lg-5 col-md-7">
         <div class="fin-btn-group">
             <button class="fin-link-btn content-prev" ng-click="reviewInfo()"><span><img src="assets/images/startedArrow.png"></span>REVIEW INFO</button>
             <button ng-click="appendValues(modelVal);(step = step + 1);saveInfo()" ng-disabled="shouldShowDeclaration() && (!modelVal.signature || !modelVal.isTerms || !modelVal.isDeclaration)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
