--- a/less/invest.less
+++ b/less/invest.less
@@ -68,6 +68,7 @@ section{
 						    position:relative;
 							top: 6px;
 							display:table;
+							min-width: 36px;
 						    .right{
 								position:absolute;
 								left:0px;
