--- a/app/modules/investwithdraw/views/reviewInvestment.html
+++ b/app/modules/investwithdraw/views/reviewInvestment.html
@@ -1,7 +1,7 @@
 <section class="investStep1">
 	<div class="col-xs-12">
 		<div class="row">
-			<div class="col-lg-8 col-xs-12">
+			<div class="col-lg-8 col-md-9 col-xs-12">
 				<div class="table-outer-cover reviewInvest" ng-repeat="recommendedSchemes in $root.recommended_schemes">
 					<div class="seperate-cover" custom-scroll-bar>
 					<h4>{{recommendedSchemes.goal_summary.goal}}</h4>
@@ -43,7 +43,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="col-xs-4 hidden-xs">
+			<div class="col-xs-4 col-md-2 hidden-xs">
 				<div class="image-div">
 					<img src="assets/images/reviewCheckMark.png">
 				</div>
