--- a/app/modules/planinvestment/modules/earnInterest/views/earnInterestStart.html
+++ b/app/modules/planinvestment/modules/earnInterest/views/earnInterestStart.html
@@ -17,7 +17,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="col-xs-12 bottom-desc">
+	<div class="col-xs-12 col-lg-5 col-md-7 bottom-desc">
 		<div class="fin-btn-group addMargin text-left">
             <button click-redirect="/planInvest" class="fin-link-btn content-prev text-left"><span><img src="assets/images/startedArrow.png"></span>CONTINUE PLANNING</button>
             <button click-redirect="/earnInterest" class="fin-app-btn fin-orange">CONTINUE</button>
