--- a/app/modules/registerinvestor/views/registerInvestorReview.html
+++ b/app/modules/registerinvestor/views/registerInvestorReview.html
@@ -25,7 +25,7 @@
 	        <p class="paddingTop2">To change the information provided, please contact us at <a href="mailto:ask@finaskus.com">ask@finaskus.com</a>
 	        </p>
 	    </div>
-	    <div class="col-xs-12">
+	    <div class="col-xs-12 col-lg-5 col-md-7">
 	    	<div class="row">
 	    		<div class="fin-btn-cover started">
                     <div class="fin-btn-group">
