--- a/app/modules/registration/views/register.html
+++ b/app/modules/registration/views/register.html
@@ -1,5 +1,5 @@
 <section class="fadeIn register">
-  <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 side-desc visible-xs">
+  <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 side-desc visible-xs visible-sm">
     <div class="row">
     	<header class="contact-header col-xs-12">
 			<div class="row">
@@ -80,7 +80,7 @@
       </div>
     </div>
   </div>
-  <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 side-desc hidden-xs">
+  <div class="col-xs-12 col-sm-12 col-md-5 col-lg-5 side-desc hidden-xs hidden-sm">
     <div class="row">
     	<header class="contact-header col-xs-12">
 			<div class="row">
