--- a/less/gettingStarted.less
+++ b/less/gettingStarted.less
@@ -1,6 +1,6 @@
 .getStarted{
 	padding-top:4%;
-	padding-left:6%;
+	padding-left:3%;
 	padding-right:6%;
 	.pigyImage{
 		img{
@@ -68,9 +68,18 @@
       width: 35%;
       margin-right: 3%;
       padding: 3%;
-      @media @below768{
+     
+    }
+  }
+  &.firstScreen{
+    .fin-app-btn{
+      @media @below600{
         width: 100%;
+        margin-top:5%;
       }
+      
+      
+     
     }
   }
 }
