--- a/app/modules/common/views/partials/swiper.html
+++ b/app/modules/common/views/partials/swiper.html
@@ -2787,7 +2787,7 @@
                       <h1 class="topHeader">You can invest upto <span class="currency">&#8377;</span> 1,50,000 to maximise your tax<span class="nextline">savings.</span><span class="nextline">Enter amount to invest</span></h1>
                       <p class="question"><span class="currency swiper-input normal"><span class="currency">&#8377</span><input format="number" type="text" name="year" required ng-model="modelVal.A2"></span><span class="or">OR</span><button class="fin-app-btn fin-btn-white" ng-click="reloadRoute('op2', 1)">PLEASE HELP ME ESTIMATE</button></p>
                       <span class="error-text" ng-show="modelVal.A2 != 0 && modelVal.A2 > 9999999">Maximum amount must be lesser than 99,99,999</span>
-                      <span class="error-text" ng-show="modelVal.A2 != 0 && modelVal.A2 < 5000">Minimum amount must be greater than or equal to 5000</span>
+                      <span class="error-text" ng-show="modelVal.A2 != 0 && modelVal.A2 < 500">Minimum amount must be greater than or equal to 500</span>
 
                       <span class="placeholder addPadding-4Per">Note: This amount will be invested in Equity Linked Savings Schemes (ELSS) of reputed asset management companies, to maximize your tax savings.</span>
                 </div>
@@ -2865,7 +2865,7 @@
         <button ng-show="step == 1" class="fin-link-btn content-prev" click-redirect="taxsavingStarted"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
 
         <button ng-show="(step == 1) && ($root.selectedCriteria == 'op1' || $root.selectedCriteria == 'op2')" ng-click="appendValues(modelVal);(step = step + 1)" ng-disabled="retirementForm1.$invalid" class="fin-app-btn fin-orange content-next">CONTINUE</button>
-        <button ng-show="(step == 2) && ($root.selectedCriteria == 'op1')" ng-click="appendValues(modelVal);(step = step + 1);getGoalGraphDetails()" ng-disabled="(modelVal.A2 == 0)||(modelVal.A2 == undefined)||(modelVal.A2 < 5000)||(modelVal.A2 > 9999999)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
+        <button ng-show="(step == 2) && ($root.selectedCriteria == 'op1')" ng-click="appendValues(modelVal);(step = step + 1);getGoalGraphDetails()" ng-disabled="(modelVal.A2 == 0)||(modelVal.A2 == undefined)||(modelVal.A2 < 500)||(modelVal.A2 > 9999999)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
         <button ng-show="(step == 2) && ($root.selectedCriteria == 'op2')" ng-click="appendValues(modelVal);(step = step + 1);getGoalGraphDetails()" ng-disabled="(modelVal.A2 == 0)||(modelVal.A2 == undefined)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
     </div>
     </div>
@@ -3278,7 +3278,7 @@
                 <div class="col-xs-12 col-lg-10 col-md-10">
                     <div class="fin-btn-group addMargin">
                         <button click-redirect="/earnInterestStart" class="fin-link-btn content-prev"><span><img src="assets/images/startedArrow.png"></span>GO BACK & EDIT</button>
-                        <!-- <button click-redirect="/goals" class="fin-app-btn fin-orange">CONTINUE PLANING</button> -->
+                        <!-- <button click-redirect="/goals" class="fin-app-btn fin-orange">CONTINUE PLANNING</button> -->
                         <button ng-click="fundSelectionEarnInterest(modelVal)" class="fin-app-btn fin-orange">CONTINUE TO FUND SELECTION</button>
                     </div>
                 </div>
@@ -3292,7 +3292,7 @@
     <div class="col-xs-8 col-lg-4 col-md-7">
     <div class="fin-btn-group gotoPages" ng-show="$root.lastSlide">
         <button class="fin-link-btn content-prev" click-redirect="/earnInterestStart" ng-click="(step != 1) && (step = step - 1)"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
-        <button ng-show="(step == 1)" ng-disabled="modelVal.A1 == ''" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
+        <button ng-show="(step == 1)" ng-disabled="retirementForm1.$invalid" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
         <button ng-show="(step == 2)" ng-disabled="(!modelVal.A2 || modelVal.A2 == '' || modelVal.A2 < 5000 || modelVal.A2 > 9999999 || (modelVal.A2%100) > 0)" ng-click="appendValues(modelVal);(step = step + 1);getAssetAllocationCategory()" class="fin-app-btn fin-orange content-next">CONTINUE</button>
     </div>
     </div>
