--- a/app/modules/common/views/partials/swiper.html
+++ b/app/modules/common/views/partials/swiper.html
@@ -717,8 +717,8 @@
                             <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="$root.toolTipEquiDebt" info-width="100%" class-name="guagePig"></info-tip></span>Equity/Debt Mix</p></div>
                             <div class="meter-widget-cover">
                                 <div class="col-xs-12 meter-header">
-                                    <button ng-if="$root.selectedCriteria == 'op1'" class="edit" ng-click="callModel(modelVal.assetAllocation.debt, modelVal.assetAllocation.equity, modelVal.A2)"></button>
-                                    <button ng-if="$root.selectedCriteria == 'op2'" class="edit" ng-click="callModel(modelVal.assetAllocation.debt, modelVal.assetAllocation.equity, modelVal.A4)"></button>
+                                    <button ng-if="$root.selectedCriteria == 'op1'" class="edit" ng-click="callModel(modelVal.assetAllocation.debt, modelVal.assetAllocation.equity, modelVal.A2, 1000)"></button>
+                                    <button ng-if="$root.selectedCriteria == 'op2'" class="edit" ng-click="callModel(modelVal.assetAllocation.debt, modelVal.assetAllocation.equity, modelVal.A4, 5000)"></button>
                                     <div class="row">
                                         <div class="col-xs-6 text-right">
                                             <h2 class="debt">Debt</h2>
@@ -3400,10 +3400,10 @@
             <div class="col-xs-12 bottom-desc">
                 <p><span class="bottom-label">Amount in Debt:</span><span class="amount-cover less"><span class="currency">&#8377</span><span class="amount">{{debtAmountModal}}</span></span></p>
                 <p><span class="bottom-label">Amount in Equity:</span><span class="amount-cover"><span class="currency">&#8377</span><span ng-bind="equityValue|currency:''"></span><span class="amount">{{equityAmountModal}}</span></p>
-                <p class="note" ng-if="(equityAmountModal < 1000 && debtAmountModal < 1000)">Note: Investment in Debt and Equity funds below minimum limit <span class="currency">&#8377</span><span class="amount"><span class="amount">1000</span></span></p>
-                <p class="note" ng-if="(debtAmountModal < 1000)">Note: Investment in Debt funds below minimum limit <span class="currency">&#8377</span><span class="amount">1000</span></p>
-                <p class="note" ng-if="(equityAmountModal < 1000)">Note: Investment in Equity funds below minimum limit <span class="currency">&#8377</span><span class="amount">1000</span></p>
-                <button class="fin-app-btn fin-orange" ng-disabled="((equityAmountModal > 0 && equityAmountModal < 1000) || (debtAmountModal > 0 && debtAmountModal < 1000))" ng-click="saveEquityDebtMix(equity, equity2)">SAVE MIX</button>
+                <p class="note" ng-if="(equityAmountModal < minAmount && debtAmountModal < minAmount)">Note: Investment in Debt and Equity funds below minimum limit <span class="currency">&#8377</span><span class="amount"><span class="amount">{{minAmount}}</span></span></p>
+                <p class="note" ng-if="(debtAmountModal > 0 && debtAmountModal < minAmount)">Note: Investment in Debt funds below minimum limit <span class="currency">&#8377</span><span class="amount">{{minAmount}}</span></p>
+                <p class="note" ng-if="(equityAmountModal > 0 && equityAmountModal < minAmount)">Note: Investment in Equity funds below minimum limit <span class="currency">&#8377</span><span class="amount">{{minAmount}}</span></p>
+                <button class="fin-app-btn fin-orange" ng-disabled="((equityAmountModal > 0 && equityAmountModal < minAmount) || (debtAmountModal > 0 && debtAmountModal < minAmount))" ng-click="saveEquityDebtMix(equity, equity2)">SAVE MIX</button>
             </div>
         </div>
     </div>
