Worked on fixing few bugs and issues

--- a/app/modules/authentication/views/getstarted.html
+++ b/app/modules/authentication/views/getstarted.html
@@ -51,13 +51,13 @@
 			</div>
 		</div>
 	</div> -->
-</div>
-<div class="col-xs-10 col-md-6 col-sm-9 col-lg-5">
-	<div class="fin-btn-cover started firstScreen">
-		<div class="fin-btn-group">
-			<button ng-click="back()" class="fin-link-btn"><span><img src="assets/images/startedArrow.png"></span>GO BACK</button>
-			<button ng-if="!loggedIn" click-redirect="/registration" class="fin-app-btn fin-white content-next">SKIP TO REGISTRATION</button>
-			<button class="fin-app-btn fin-orange" click-redirect="/riskAssesment">CONTINUE</button>
+	<div class="col-xs-10 col-md-6 col-sm-9 col-lg-5 no-padding">
+		<div class="fin-btn-cover started firstScreen no-padding">
+			<div class="fin-btn-group">
+				<button ng-click="back()" class="fin-link-btn"><span><img src="assets/images/startedArrow.png"></span>GO BACK</button>
+				<button ng-if="!loggedIn" click-redirect="/registration" class="fin-app-btn fin-white content-next">SKIP TO REGISTRATION</button>
+				<button class="fin-app-btn fin-orange" click-redirect="/riskAssesment">CONTINUE</button>
+			</div>
 		</div>
 	</div>
 </div>
