--- a/app/modules/goals/views/goal.html
+++ b/app/modules/goals/views/goal.html
@@ -1,6 +1,6 @@
 <section class="fadeIn dashboard goals">
 	<div class="col-xs-12 goal-section">
-		<div class="row">
+		<div class="">
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover" >
 				<div class="goals-cover">
 					<div class="checkbox-cover-delete" ng-if="$root.goalAnswered['retirement']">
@@ -137,7 +137,7 @@
 	</div>
 	<div class="col-xs-12 bottom-desc">
 		<p class="text-left">I am done setting my goals.</p>
-		<div class="no-padding col-xs-12 col-sm-10 col-md-6 col-lg-6">
+		<div class="no-padding col-xs-12 col-sm-10 col-md-6 col-lg-4">
 			<div class="fin-btn-group addMargin text-left">
 	            <button click-redirect="/planInvest" class="fin-link-btn content-prev text-left"><span><img src="assets/images/startedArrow.png"></span>CONTINUE PLANNING</button>
 	            <button ng-click="goToInvest()" class="fin-app-btn fin-orange">CONFIRM & PAY</button>
