--- a/less/trackperformance.less
+++ b/less/trackperformance.less
@@ -357,6 +357,7 @@ section{
 									text-align:center;
 									vertical-align:middle;
 									padding-left:8px;
+									min-width:32px;
 								}
 							}
 						}
