--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1231,7 +1231,7 @@ button[disabled]:hover {
           border-radius: 50%;
 }
 .xScrollDiv {
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 .fadeIn {
   -webkit-animation-name: fadeIn;
@@ -2663,7 +2663,7 @@ span.error-text {
 }
 .getStarted {
   padding-top: 4%;
-  padding-left: 3%;
+  padding-left: 9%;
   padding-right: 6%;
 }
 .getStarted .pigyImage img {
@@ -2995,6 +2995,11 @@ span.error-text {
 @media only screen and (max-width:768px) {
   .swiper-container {
     min-height: 450px;
+  }
+}
+@media only screen and (min-width:1400px) {
+  .swiper-container {
+    min-height: 550px;
   }
 }
 .swiper-container .bubble {
@@ -3445,6 +3450,11 @@ span.error-text {
     margin-bottom: 12%;
     float: left;
     width: 100%;
+  }
+}
+@media only screen and (min-width:1400px) {
+  .swiper-container.customSwiper .swiper-content {
+    min-height: 550px;
   }
 }
 .swiper-container.customSwiper .swiper-content p {
@@ -3914,6 +3924,10 @@ span.error-text {
 .swiper-container.customSwiper .swiper-content.hasCheckbox {
   min-height: 580px;
 }
+.swiper-container.customSwiper .fin-btn-group-wrapper {
+  position: absolute;
+  bottom: 2%;
+}
 .swiper-container.customSwiper .fin-btn-group.gotoPages {
   z-index: 1000;
   width: 100%;
@@ -3958,6 +3972,11 @@ span.error-text {
   transition: opacity 0.2s ease;
   visibility: hidden;
   min-height: 450px;
+}
+@media only screen and (min-width:1400px) {
+  .swiper-slide {
+    min-height: 550px;
+  }
 }
 .swiper-slide-prev,
 .swiper-slide-next {
@@ -4212,46 +4231,45 @@ section.dashboard h1 {
   opacity: 0.7;
 }
 section.dashboard .goals-outer-cover {
-  width: 22%;
   float: left;
 }
-section.dashboard .goals-outer-cover:nth-child(1) .image-div img {
-  width: 104%;
+section.dashboard .goals-outer-cover.riskassess .image-div img {
+  width: 84%;
 }
 @media only screen and (max-width:768px) {
-  section.dashboard .goals-outer-cover:nth-child(1) .image-div img {
+  section.dashboard .goals-outer-cover.riskassess .image-div img {
     width: 80%;
   }
 }
-section.dashboard .goals-outer-cover:nth-child(2) .image-div img {
-  width: 140%;
+section.dashboard .goals-outer-cover.planinvest .image-div img {
+  width: 93%;
 }
 @media only screen and (max-width:768px) {
-  section.dashboard .goals-outer-cover:nth-child(2) .image-div img {
+  section.dashboard .goals-outer-cover.planinvest .image-div img {
     width: 80%;
   }
 }
-section.dashboard .goals-outer-cover:nth-child(3) .image-div img {
-  width: 78%;
+section.dashboard .goals-outer-cover.trackperform .image-div img {
+  width: 67%;
 }
 @media only screen and (max-width:768px) {
-  section.dashboard .goals-outer-cover:nth-child(3) .image-div img {
+  section.dashboard .goals-outer-cover.trackperform .image-div img {
     width: 80%;
   }
 }
-section.dashboard .goals-outer-cover:nth-child(4) .image-div img {
-  width: 125%;
+section.dashboard .goals-outer-cover.withdraw .image-div img {
+  width: 108%;
 }
 @media only screen and (max-width:768px) {
-  section.dashboard .goals-outer-cover:nth-child(4) .image-div img {
+  section.dashboard .goals-outer-cover.withdraw .image-div img {
     width: 80%;
   }
 }
 section.dashboard .goals-outer-cover:not(:last-child) {
-  margin-right: 3%;
+  /*margin-right:3%;*/
 }
 section.dashboard .goals-outer-cover:first-child {
-  margin-left: 2%;
+  /*margin-left:2%;*/
 }
 section.dashboard .goals-outer-cover h2 {
   float: left;
@@ -4315,7 +4333,9 @@ section.dashboard .goals-outer-cover h4 {
 }
 @media only screen and (max-width:768px) {
   section.dashboard .goals-outer-cover {
-    width: 100%;
+    width: 80%;
+    float: none;
+    margin: 0 auto !important;
   }
 }
 section.dashboard .goals-outer-cover .goal_number {
@@ -4324,7 +4344,7 @@ section.dashboard .goals-outer-cover .goal_number {
 section.dashboard .goals-cover {
   cursor: pointer;
   position: relative;
-  width: 100%;
+  width: 90%;
   -webkit-border-radius: 25px;
      -moz-border-radius: 25px;
           border-radius: 25px;
@@ -4347,7 +4367,7 @@ section.dashboard .goals-cover .image-div img {
   margin: 0 auto;
 }
 section.dashboard .goals-cover .invest-goal {
-  margin: 14% 6%;
+  margin: 20% 17%;
 }
 @media only screen and (max-width:768px) {
   section.dashboard .goals-cover .invest-goal {
@@ -4726,7 +4746,7 @@ section.quickInvest .started {
   }
 }
 .goals .goal-section:nth-child(2) .goals-outer-cover:nth-child(1) .image-div img {
-  width: 58%!important;
+  width: 49%!important;
 }
 @media only screen and (max-width:768px) {
   .goals .goal-section:nth-child(2) .goals-outer-cover:nth-child(1) .image-div img {
@@ -7790,6 +7810,7 @@ section.trackPerformance .chart-cover.scheme-pie .trackPerformanceLegends .legen
   text-align: center;
   vertical-align: middle;
   padding-left: 8px;
+  min-width: 32px;
 }
 section.trackPerformance .chart-cover.transaction-cover {
   height: 517px;
