--- a/app/modules/common/views/header.html
+++ b/app/modules/common/views/header.html
@@ -4,7 +4,7 @@
         <div class="navbar-header col-xs-6 col-lg-2 col-md-2 col-sm-4">
           <a class="navbar-brand" href="javascript:void(0)" click-redirect="/"><img class="img img-responsive" src="assets/images/logo.png"></a>
         </div>
-        <h1 ng-if="title" class="hidden-xs hidden-sm"><span class="mainTitle" ng-bind="title"></span><span class="nextline" ng-bind="subHeader" click-redirect="{{redirectURL}}"></span></h1>
+        <h1 ng-if="title" class="hidden-xs"><span class="mainTitle" ng-bind="title"></span><span class="nextline" ng-bind="subHeader" click-redirect="{{redirectURL}}"></span></h1>
           <ul class="nav navbar-nav navbar-right col-xs-4 col-lg-5 col-md-5 pull-right no-padding">
           <li class="pull-right"><a href="javascript:void(0)" class="fin-link menu">MENU <span class="menu-icon"></span></a></li>
             <li class="pull-right" ng-if="!menu && !loggedIn"><a href="javascript:void(0)" click-redirect="/" class="fin-link log-in">LOG IN</a></li>
