Add forgot password functionality

--- a/app/modules/authentication/views/login.html
+++ b/app/modules/authentication/views/login.html
@@ -32,6 +32,7 @@
 				<button class="fin-app-btn fin-signIn" ng-click="googleSignIn()"><span class="sign-img"><img src="assets/images/gSignIn.png"></span><span>SIGN IN WITH GOOGLE</span></button>
 			</div>
 		</form>
+		<p class="paddingTop2 pull-left"><span class="nextline redirect" ng-click="processPasswordReset()">Forgot Password?</span></p>
 		<div ng-if="errorMessage" class="form-error"><p ng-bind="errorMessage"></p></div>
 	</div>
 </div>
