Fixed few bugs and issues

--- a/app/modules/dashboard/views/dashboard.html
+++ b/app/modules/dashboard/views/dashboard.html
@@ -22,7 +22,7 @@
 				</div>
 
 				<div ng-if="!risk_score">
-					<h4 class="text-center">You currently have no risk score</h4>
+					<h4 class="text-center">You have not completed your risk assessment.</h4>
 				</div>
 				</div>
 			</div>
