--- a/app/modules/common/views/drawer.html
+++ b/app/modules/common/views/drawer.html
@@ -38,9 +38,9 @@
         <li class="panel"><a href="javascript:void(0)" click-redirect="https://www.finaskus.com/#/contactUs">Support &amp; Feedback</a></li>
         <li class="panel"><a href="javascript:void(0)">Share with a friend</a></li>
         <li class="panel"><a href="javascript:void(0)" click-redirect="https://www.finaskus.com/#/aboutUs">About</a></li> -->
-        <li class="panel"><a href="https://www.finaskus.com/">Finaskus Website</a></li>
-        <li class="panel"><a href="javascript:void(0)" click-redirect="/settings">Settings</a></li>
-        <li class="panel"><a href="javascript:void(0)" ng-click="userLogout()">Logout</a></li>
+        <li class="panel"><a href="https://www.finaskus.com/" target="_blank">FinAskUs Website</a></li>
+        <!-- <li class="panel"><a href="javascript:void(0)" click-redirect="/settings">Settings</a></li>
+        <li class="panel"><a href="javascript:void(0)" ng-click="userLogout()">Logout</a></li> -->
         <!-- <li class="panel"><a href="javascript:void(0)">Help?</a></li> -->
       </ul>
       <p class="copywrite"><span>Finaskus</span><span>&copy;</span><span>2016</span></p>
