--- a/app/modules/common/views/partials/swiper.html
+++ b/app/modules/common/views/partials/swiper.html
@@ -2818,7 +2818,8 @@
                 <div class="col-xs-12">
                     <div class="row">
                         <div class="gauge-result">
-                            <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="infoProjTaxSaving" info-width="100%" class-name="guagePig"></span>Projected Tax Saving</p></div>
+                            <div class="col-xs-12 result-header"><p><span class="pigy-icon"><info-tip quick-tip-data="infoProjTaxSaving" info-width="100%" class-name="guagePig"></span>Estimated Tax Saving</p></div>
+                            <p><span class="placeholder addPaddingLeft-20Per">Your potential tax benefit is <span class="currency">&#8377</span>{{taxsaving.taxBenefit | currency:''}}</span></p>
                             <p><span class="placeholder addPadding-4Per addPaddingLeft-20Per">Note: This amount will be invested in <span class="nextline">Equity Linked Savings Schemes (ELSS) </span><span class="nextline">of reputed asset management companies, </span>to maximize your tax savings.</span></p>
                         </div>
                         <div class="gauge-result">
@@ -2865,7 +2866,7 @@
         <button ng-show="step == 1" class="fin-link-btn content-prev" click-redirect="taxsavingStarted"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
 
         <button ng-show="(step == 1) && ($root.selectedCriteria == 'op1' || $root.selectedCriteria == 'op2')" ng-click="appendValues(modelVal);(step = step + 1)" ng-disabled="retirementForm1.$invalid" class="fin-app-btn fin-orange content-next">CONTINUE</button>
-        <button ng-show="(step == 2) && ($root.selectedCriteria == 'op1')" ng-click="appendValues(modelVal);(step = step + 1);getGoalGraphDetails()" ng-disabled="(modelVal.A2 == 0)||(modelVal.A2 == undefined)||(modelVal.A2 < 500)||(modelVal.A2 > 9999999)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
+        <button ng-show="(step == 2) && ($root.selectedCriteria == 'op1')" ng-click="appendValues(modelVal);(step = step + 1);computeTaxBenefit()" ng-disabled="(modelVal.A2 == 0)||(modelVal.A2 == undefined)||(modelVal.A2 < 500)||(modelVal.A2 > 9999999)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
         <button ng-show="(step == 2) && ($root.selectedCriteria == 'op2')" ng-click="appendValues(modelVal);(step = step + 1);getGoalGraphDetails()" ng-disabled="(modelVal.A2 == 0)||(modelVal.A2 == undefined)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
     </div>
     </div>
