--- a/app/modules/smartportfolio/views/schemeFactsheet.html
+++ b/app/modules/smartportfolio/views/schemeFactsheet.html
@@ -113,4 +113,13 @@
 			<p>{{$root.factsheetData.analysis}}</p>
 		</div>
 	</div>
+	<div class="col-xs-12 bottom-desc">
+		
+		<div class="no-padding col-xs-12 col-sm-10 col-md-6 col-lg-4">
+			<div class="fin-btn-group addMargin text-left">
+	            <button ng-click="back()" class="fin-link-btn content-prev text-left"><span><img src="assets/images/startedArrow.png"></span>Go Back</button>
+	            
+	        </div>
+	    </div>
+	</div>
 </section>
