--- a/app/modules/trackperformance/views/trackPerformanceStart.html
+++ b/app/modules/trackperformance/views/trackPerformanceStart.html
@@ -295,6 +295,15 @@
 			</div>
 		</div>
 	</div>
+	<div class="col-xs-12 bottom-desc">
+		
+		<div class="no-padding col-xs-12 col-sm-10 col-md-6 col-lg-4">
+			<div class="fin-btn-group addMargin text-left">
+	            <button ng-click="back()" class="fin-link-btn content-prev text-left"><span><img src="assets/images/startedArrow.png"></span>Go Back</button>
+	            
+	        </div>
+	    </div>
+	</div>
 </section>
 <div class="modal fade fade-scale" id="finGoalStatusModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
