Add message for password reset

--- a/app/modules/authentication/views/forgotPassword.html
+++ b/app/modules/authentication/views/forgotPassword.html
@@ -21,6 +21,7 @@
 						<input type="text" name="email" ng-model="user.email" required>
 						<label>Email</label>
 					</div>
+					<p class="paddingTop2 pull-left"><span class="nextline">A password reset link will be sent to the above email address.</span></p>
 				</div>
 				<div class="login-btn-group">
 					<button class="fin-app-btn fin-orange full-width" ng-click="callPasswordReset(user)">SUBMIT</button>
