--- a/app/modules/registerinvestor/views/registerInvestorInfo.html
+++ b/app/modules/registerinvestor/views/registerInvestorInfo.html
@@ -8,7 +8,7 @@
             <h2 class="pull-left">Hold up! You need to provide the following information before you can invest.</h2>
             <div class="checklist-cover col-xs-12">
                 <div class="row">
-                    <div class="col-xs-3">
+                    <div class="col-lg-3 col-xs-12 col-md-3 col-sm-6">
                         <div class="row">
                             <div class="checklist">
                                 <div class="checkedList">
@@ -41,7 +41,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xs-3">
+                    <div class="col-lg-3 col-xs-12 col-md-3 col-sm-6">
                         <div class="row">
                             <div class="checklist">
                                 <div class="checkedList">
@@ -66,7 +66,7 @@
                 </div>
             </div>
         </div>                
-        <div class="col-xs-12">
+        <div class="col-xs-12 col-lg-5 col-md-7">
             <div class="row">
                 <div class="fin-btn-cover started">
                     <div class="fin-btn-group">
