--- a/app/modules/registerinvestor/views/registerInvestorStarted.html
+++ b/app/modules/registerinvestor/views/registerInvestorStarted.html
@@ -10,7 +10,7 @@
             <h2 class="pull-left">Please keep the following ready at hand.</h2>
             <div class="col-xs-12 documents-outer-cover">
                 <div class="row">
-                    <div class="col-xs-4 documents-cover">
+                    <div class="col-xs-12 col-lg-4 documents-cover">
                         <div class="row">
                             <div class="col-xs-4 documents-each">
                                 <div class="image-outer-cover">
@@ -42,7 +42,7 @@
             </div>
             <div class="checklist-cover col-xs-12">
                 <div class="row">
-                    <div class="col-xs-6">
+                    <div class="col-xs-12">
                         <div class="row">
                             <div class="checklist">
                                 <div class="checkedList">
@@ -67,7 +67,7 @@
                 </div>
             </div>
         </div>                
-        <div class="col-xs-12">
+        <div class="col-xs-12 col-lg-5 col-md-7">
             <div class="row">
                 <div class="fin-btn-cover started">
                     <div class="fin-btn-group">
