--- a/app/modules/trackperformance/views/trackPerformanceStart.html
+++ b/app/modules/trackperformance/views/trackPerformanceStart.html
@@ -42,7 +42,7 @@
 					</div>
 				</div>
 				<div class="last-day-change">
-					<h3>Last Day's Change</h3>
+					<h3>Last Day's Change<p class="pull-right">As of  <span class="content">{{dashboardDate}}</span></p></h3>
 					<div class="table-outer-cover">
 						<div class="thead">
 							<div class="tr">
@@ -220,7 +220,7 @@
 								</div>
 							</div>
 							<div class="col-xs-6">
-								<p class="finance-desc" ng-click="showFinancialGoalModal(finGoals)"><span class="content">{{finGoals.name}}</span><span class="nextline placeholder addOnlyBold">ON TRACK</span></p>
+								<p class="finance-desc" ng-click="showFinancialGoalModal(finGoals)"><span class="content">{{finGoals.name}}</span><span class="nextline placeholder addOnlyBold" ng-if="false">ON TRACK</span></p>
 							</div>
 							<div class="col-xs-4">
 								<p class="target-amount"><span class="content highlight"><span class="currency">&#8377;</span><span class="content">{{finGoals.goal}}</span></span><span class="nextline placeholder">{{finGoals.dateFormatted | date:'dd/MM/yyyy'}}</span></p>
@@ -328,7 +328,7 @@
 						<div class="no-padding col-xs-12">
 							<div class="progress">
 							    <div class="progress-bar" role="progressbar" ng-style="getWidth(finGoalsModal)">
-							    <span class="progress-price"><span class="currency">&#8377</span><span class="amount ng-binding">{{finGoalsModal.invested_value}}</span></span>
+							    <span class="progress-price"><span class="currency">&#8377</span><span class="amount ng-binding">{{finGoalsModal.expected_value}}</span></span>
 							    <span class="progress-percentage placeholder">{{finGoalsModal.progress}}%</span>
 							    </div>
 							</div>
