--- a/app/modules/registration/views/change_password.html
+++ b/app/modules/registration/views/change_password.html
@@ -16,16 +16,15 @@
 			<form name="mobileForm" novalidate>
 				<div class="form-group">
 					<label class="">Old Password</label>
-					<input check-password ng-class="{'has-error':mobileForm.phone.$error.pattern}" type="password" name="old_password" ng-model="old_password" required>
-					<span class="without-error" ng-class="{'error-text':mobileForm.old_password.$error.oneNumber,'normal':reset}"><span ng-if="mobileForm.old_password.$error.oneNumber" class="wrong"></span><span ng-if="!mobileForm.old_password.$error.oneNumber" class="correct"></span>Please enter atleast one number</span>
-			        <!-- <span class="without-error" ng-class="{'error-text':registerForm.password.$error.oneUpper,'normal':reset}"><span ng-if="registerForm.password.$error.oneUpper" class="wrong"></span><span ng-if="!registerForm.password.$error.oneUpper" class="correct"></span>Please enter one upper case</span> -->
-			        <span class="without-error" ng-class="{'error-text':mobileForm.old_password.$error.oneSmall,'normal':reset}"><span ng-if="mobileForm.old_password.$error.oneSmall" class="wrong"></span><span ng-if="!mobileForm.old_password.$error.oneSmall" class="correct"></span>Please enter atleast one small case</span>
-			        <span class="without-error" ng-class="{'error-text':mobileForm.old_password.$error.minlength,'normal':reset}"><span ng-if="mobileForm.old_password.$error.minlength" class="wrong"></span><span ng-if="!mobileForm.old_password.$error.minlength" class="correct"></span>Please enter minimum 8 character's</span>
-					
+					<input ng-class="{'has-error':mobileForm.phone.$error.pattern}" type="password" name="old_password" ng-model="old_password" required>
 				</div>
 				<div class="form-group">
 					<label class="">New Password</label>
-					<input ng-class="{'has-error':mobileForm.phone.$error.pattern}" type="password" name="new_password" ng-model="new_password" required>
+					<input check-password ng-class="{'has-error':mobileForm.phone.$error.pattern}" type="password" name="new_password" ng-model="new_password" required>
+					<span class="without-error" ng-class="{'error-text':mobileForm.new_password.$error.oneNumber,'normal':reset}"><span ng-if="mobileForm.new_password.$error.oneNumber" class="wrong"></span><span ng-if="!mobileForm.new_password.$error.oneNumber" class="correct"></span>Please enter atleast one number</span>
+			        <!-- <span class="without-error" ng-class="{'error-text':registerForm.password.$error.oneUpper,'normal':reset}"><span ng-if="registerForm.password.$error.oneUpper" class="wrong"></span><span ng-if="!registerForm.password.$error.oneUpper" class="correct"></span>Please enter one upper case</span> -->
+			        <span class="without-error" ng-class="{'error-text':mobileForm.new_password.$error.oneSmall,'normal':reset}"><span ng-if="mobileForm.new_password.$error.oneSmall" class="wrong"></span><span ng-if="!mobileForm.new_password.$error.oneSmall" class="correct"></span>Please enter atleast one small case</span>
+			        <span class="without-error" ng-class="{'error-text':mobileForm.new_password.$error.minlength,'normal':reset}"><span ng-if="mobileForm.new_password.$error.minlength" class="wrong"></span><span ng-if="!mobileForm.new_password.$error.minlength" class="correct"></span>Please enter minimum 8 character's</span>
 					
 					
 					
