--- a/app/modules/smartportfolio/views/recommended.html
+++ b/app/modules/smartportfolio/views/recommended.html
@@ -124,10 +124,12 @@
 			</div>
 		</div>
 	</div>
-	<div class="fin-btn-group addMargin">
-	    <button click-redirect="{{$root.redirectURL}}" class="fin-link-btn content-prev"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
-	    <button click-redirect="/planInvest" class="fin-app-btn fin-blue">CONTINUE PLANNING</button>
-	    <button ng-click="goToInvest()" class="fin-app-btn fin-orange">CONFIRM & PAY</button>
+	<div class="col-xs-12 col-lg-7 col-md-7 col-sm-10">
+		<div class="fin-btn-group addMargin">
+		    <button click-redirect="{{$root.redirectURL}}" class="fin-link-btn content-prev"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
+		    <button click-redirect="/planInvest" class="fin-app-btn fin-blue">CONTINUE PLANNING</button>
+		    <button ng-click="goToInvest()" class="fin-app-btn fin-orange">CONFIRM & PAY</button>
+		</div>
 	</div>
 </section>
 
