--- a/less/table.less
+++ b/less/table.less
@@ -133,6 +133,10 @@
 		}		
 		.thead{
 			.th{
+				@media @below600{
+					text-align: center;
+				}
+				
 				&:nth-child(1){
 					width:10%;
 					float:left;
