--- a/app/modules/registration/views/register.html
+++ b/app/modules/registration/views/register.html
@@ -23,12 +23,12 @@
 	      		<div class="contact-form">
 	      			<form name="registerForm" novalidate>
 	      				<div class="form-group">
-	      					<div class="col-xs-2">
+	      					<div class="col-xs-3 col-lg-2 col-sm-2">
 	      						<div class="row">
 		      						<select dropdown disabled ng-model="prefix"><option selected value="+91">+91</option></select>
 	      						</div>
 	      					</div>
-	      					<div class="col-xs-offset-1 col-xs-9">
+	      					<div class="col-xs-offset-1 col-xs-8 col-lg-9 col-sm-9">
 		      					<div class="row">
 									<input ng-class="{'has-error':registerForm.phone.$error.pattern}" type="text" ng-pattern="/^[0-9]+$/" name="phone" maxLength="10" ng-model="register.phone_number" required>
 									<label>Phone No.</label>
