--- a/app/modules/trackperformance/views/trackPerformanceStart.html
+++ b/app/modules/trackperformance/views/trackPerformanceStart.html
@@ -94,7 +94,7 @@
 					<li ng-click="setChartValue = 'TRANSACTION'" ng-class="{'activeli':setChartValue == 'TRANSACTION'}"><a href="javascript:void(0)">Transaction History</a></li>
 					<li ng-click="setChartValue = 'PORFOLIO_TRACKER'" ng-class="{'activeli':setChartValue == 'PORFOLIO_TRACKER'}"><a href="javascript:void(0)">Portfolio Tracker</a></li>
 				</ul>
-				<div class="chart-cover scheme-pie" ng-show="setChartValue == 'SCHEME'" custom-scroll-bar>
+				<div class="chart-cover scheme-pie" ng-if="setChartValue == 'SCHEME'" custom-scroll-bar>
 					<div class="col-xs-12">
 						<div class="col-xs-12 col-lg-6 scheme-chart">
 							<div class="row">
@@ -210,7 +210,7 @@
 						</div>
 					</div>						
 				</div>	
-				<div class="chart-cover finance-cover" ng-show="setChartValue == 'FINANCE'" custom-scroll-bar>
+				<div class="chart-cover finance-cover" ng-if="setChartValue == 'FINANCE'" custom-scroll-bar>
 					<div class="col-xs-12">
 						<div class="seperater" ng-repeat="finGoals in financial_goal_status">
 						<div class="row">
@@ -219,14 +219,14 @@
 									<img ng-src="assets/images/{{getGoalImg(finGoals)}}">
 								</div>
 							</div>
-							<div class="col-xs-6">
+							<div class="col-lg-6 col-xs-5">
 								<p class="finance-desc" ng-click="showFinancialGoalModal(finGoals)"><span class="content">{{finGoals.name}}</span><span class="nextline placeholder addOnlyBold" ng-if="false">ON TRACK</span></p>
 							</div>
-							<div class="col-xs-4">
+							<div class="col-lg-4 col-xs-5">
 								<p class="target-amount"><span class="content highlight"><span class="currency">&#8377;</span><span class="content">{{finGoals.goal}}</span></span><span class="nextline placeholder">{{finGoals.dateFormatted | date:'dd/MM/yyyy'}}</span></p>
 							</div>
 						  </div>
-						  <div class="col-xs-12">
+						  <div class="col-xs-12 no-padding">
 								<div class="progress">
 								    <div class="progress-bar" role="progressbar" ng-style="{'width':'{{finGoals.progress}}%'}">
 								    <span class="progress-price"><span class="currency">&#8377;</span><span class="amount">{{finGoals.expected_value}}</span></span>
@@ -237,7 +237,7 @@
 						 </div>
 					</div>							
 				</div>	
-				<div class="chart-cover transaction-cover" ng-show="setChartValue == 'TRANSACTION'" custom-scroll-bar>
+				<div class="chart-cover transaction-cover" ng-if="setChartValue == 'TRANSACTION'" custom-scroll-bar>
 					<div class="schemes-inner col-xs-12">
 						<div class="col-xs-12 transactionEach" ng-repeat="transactions in transactionHistory">			
 							<p ><h2 show-factsheet="{{transactions.fund_id}}" class="pull-left col-xs-9 no-padding">{{transactions.fund_name}}</h2></p>
@@ -287,7 +287,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="chart-cover" ng-show="setChartValue == 'PORFOLIO_TRACKER'" >
+				<div class="chart-cover" ng-if="setChartValue == 'PORFOLIO_TRACKER'" >
 					<h3 class="chart-main-header">Portfolio Performance Since Inception</h3>
 					<hc-chart ng-if="resultSet" items="resultSet"></hc-chart>
 					<p class="text-right"><span class="addOnlyBold highlight"><span class="currency">&#8377;</span> 10,000</span> invested on {{resultSet[0]['data'][0]['date']}} would be <span class="content" ng-if="$root.nav"><span class="currency">&#8377;</span><span class="addOnlyBold highlight">{{$root.nav.amount | currency:''}}</span> on {{$root.nav.date}}</span></p>
