--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -2987,10 +2987,6 @@ span.error-text {
 .swiper-container {
   width: 100%;
   height: 450px;
-  -webkit-transition: all 800ms ease;
-  -o-transition: all 800ms ease;
-  -moz-transition: all 800ms ease;
-  transition: all 800ms ease;
 }
 @media only screen and (max-width:768px) {
   .swiper-container {
@@ -3438,11 +3434,8 @@ span.error-text {
 .swiper-container.customSwiper .swiper-content {
   padding-bottom: 12%;
   padding-top: 6%;
-  -webkit-transition: all 0.2s ease;
-  -o-transition: all 0.2s ease;
-  -moz-transition: all 0.2s ease;
-  transition: all 0.2s ease;
   min-height: 450px;
+  height: auto;
 }
 @media only screen and (max-width:768px) {
   .swiper-container.customSwiper .swiper-content {
@@ -3966,10 +3959,6 @@ span.error-text {
 }
 .swiper-slide {
   overflow: hidden;
-  -webkit-transition: opacity 0.2s ease;
-  -o-transition: opacity 0.2s ease;
-  -moz-transition: opacity 0.2s ease;
-  transition: opacity 0.2s ease;
   visibility: hidden;
   min-height: 450px;
 }
