--- a/less/swiper.less
+++ b/less/swiper.less
@@ -1,7 +1,6 @@
 .swiper-container {
     width: 100%;
     height: 450px;
-    transition:all 800ms ease;
     @media @below768{
       min-height: 450px;
     }
@@ -294,8 +293,8 @@
       .swiper-content{
         padding-bottom:12%;
         padding-top:6%;
-        transition:all 0.2s ease;
-        min-height: 450px;
+        min-height:450px;
+        height:auto;
         @media @below768{
           padding-top: 250px !important;
           margin-bottom: 12%;
@@ -791,7 +790,6 @@
 }
 .swiper-slide{
   overflow:hidden;
-  transition:opacity 0.2s ease;
   visibility: hidden;
   min-height: 450px;
   @media @above1400{
