--- a/less/planinvset.less
+++ b/less/planinvset.less
@@ -22,6 +22,7 @@ section{
 				height:234px;
 				margin:0 auto;
 				display:table;
+				cursor:pointer;
 				@media @below768{
 					width: 84%;
 				}
