--- a/less/smartpolio.less
+++ b/less/smartpolio.less
@@ -11,6 +11,11 @@ section{
 			min-height: 430px;
 			.schemeTable{
 				margin-bottom:2%;
+				.tbody{
+					.tr{
+						padding:1.5% 0px;
+					}
+				}
 			}
 			.fin-btn-group{
 				padding-left:0px!important;
