--- a/less/table.less
+++ b/less/table.less
@@ -171,6 +171,7 @@
 		.tbody{
 			.tr{
 				padding-bottom:0px;
+				padding: 5px 0px;
 			}
 			.td{
 				&:nth-child(1){
@@ -272,7 +273,7 @@
 		.tfooter{
 			float:left;
 			width:100%;
-			padding-top: 4%;
+			padding-top: 1%;
 			.fin-link-btn{
 				padding-top: 6px;
 				padding-bottom: 1px;
@@ -421,7 +422,7 @@
 	}
 	&.withdraw{
 		width:100%;
-		margin-bottom:5%;
+		margin-bottom:2%;
 		.seperate-cover{
 			width:100%;
 			float:left;
