--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -3436,7 +3436,7 @@ span.error-text {
   }
 }
 .swiper-container.customSwiper .swiper-content {
-  padding-bottom: 12%;
+  padding-bottom: 150px;
   padding-top: 6%;
   -webkit-transition: all 0.2s ease;
   -o-transition: all 0.2s ease;
@@ -3669,7 +3669,7 @@ span.error-text {
 }
 .swiper-container.customSwiper .swiper-content.content-6 {
   padding: 1%;
-  padding-bottom: 10%;
+  padding-bottom: 150px;
   width: 80%;
   float: left;
 }
@@ -3730,6 +3730,9 @@ span.error-text {
   color: #F26529;
   font-weight: normal;
   font-size: 3.125em;
+}
+.swiper-container.customSwiper .swiper-content.content-6 .score-header ul {
+  padding-left: 5%;
 }
 .swiper-container.customSwiper .swiper-content.content-6 .score-header p.desc {
   font-family: 'PlayfairDisplay-Regular';
@@ -4461,6 +4464,7 @@ section.planinvest .invest-outer-cover .investCover {
   height: 234px;
   margin: 0 auto;
   display: table;
+  cursor: pointer;
 }
 @media only screen and (max-width:768px) {
   section.planinvest .invest-outer-cover .investCover {
@@ -6131,6 +6135,7 @@ section.registerInvestor .registerInvestorConfirm {
 }
 .table-outer-cover.compareTable .tbody .tr {
   padding-bottom: 0px;
+  padding: 5px 0px;
 }
 .table-outer-cover.compareTable .tbody .td:nth-child(1) {
   width: 10%;
@@ -6257,7 +6262,7 @@ section.registerInvestor .registerInvestorConfirm {
 .table-outer-cover.compareTable .tfooter {
   float: left;
   width: 100%;
-  padding-top: 4%;
+  padding-top: 1%;
 }
 .table-outer-cover.compareTable .tfooter .fin-link-btn {
   padding-top: 6px;
@@ -6401,7 +6406,7 @@ section.registerInvestor .registerInvestorConfirm {
 }
 .table-outer-cover.withdraw {
   width: 100%;
-  margin-bottom: 5%;
+  margin-bottom: 2%;
 }
 .table-outer-cover.withdraw .seperate-cover {
   width: 100%;
@@ -6698,6 +6703,9 @@ section.recommended .recommended-table-section {
 }
 section.recommended .recommended-table-section .schemeTable {
   margin-bottom: 2%;
+}
+section.recommended .recommended-table-section .schemeTable .tbody .tr {
+  padding: 1.5% 0px;
 }
 section.recommended .recommended-table-section .fin-btn-group {
   padding-left: 0px!important;
@@ -7328,7 +7336,7 @@ section.investStep1 .pie-cover .pie-chart-legend .label-cover .legend-cover span
 section.investStep1 .pie-cover .pie-chart-legend .label-cover .legend-cover .legend-main {
   height: 18px;
   position: relative;
-  top: 6px;
+  top: 0px;
   display: table;
   min-width: 36px;
 }
@@ -7645,6 +7653,7 @@ section.trackPerformance .chart-cover.finance-cover .mCSB_container_wrapper > .m
 section.trackPerformance .chart-cover.finance-cover .seperater {
   width: 100%;
   float: left;
+  cursor: pointer;
   padding-bottom: 48px;
   padding-left: 20px!important;
   border-bottom: 2px solid #efefef;
@@ -7767,9 +7776,9 @@ section.trackPerformance .chart-cover.scheme-pie .customPanel {
   }
 }
 section.trackPerformance .chart-cover.scheme-pie .trackPerformanceLegends {
-  margin-top: 50%;
   float: left;
   padding: 0;
+  margin-top: 6%;
 }
 @media only screen and (max-width:768px) {
   section.trackPerformance .chart-cover.scheme-pie .trackPerformanceLegends {
@@ -7782,17 +7791,22 @@ section.trackPerformance .chart-cover.scheme-pie .trackPerformanceLegends {
   }
 }
 section.trackPerformance .chart-cover.scheme-pie .trackPerformanceLegends p {
+  width: 100%;
   float: left;
   margin-right: 0;
 }
 section.trackPerformance .chart-cover.scheme-pie .trackPerformanceLegends .legend-cover {
   float: left;
-  width: 100%;
+  width: 34%;
+}
+@media only screen and (max-width:600px) {
+  section.trackPerformance .chart-cover.scheme-pie .trackPerformanceLegends .legend-cover {
+    width: 60%;
+  }
 }
 section.trackPerformance .chart-cover.scheme-pie .trackPerformanceLegends .legend-cover .legend-main {
   height: 18px;
   position: relative;
-  top: 6px;
   display: table;
   float: left;
 }
@@ -7836,12 +7850,15 @@ section.trackPerformance .chart-cover.transaction-cover .schemes-inner h2 {
 }
 section.trackPerformance .chart-cover.transaction-cover .schemes-inner .transactionEach {
   background-color: #e6eef4;
-  margin: 7px 0px;
-  padding-top: 16px;
-  padding-left: 32px;
+  margin: 2px 0px;
+  padding-top: 8px;
+  padding-left: 21px;
   -webkit-border-radius: 19px;
      -moz-border-radius: 19px;
           border-radius: 19px;
+}
+section.trackPerformance .chart-cover.transaction-cover .schemes-inner .transactionEach .table {
+  margin-bottom: 0;
 }
 section.trackPerformance .chart-main-tabs li {
   margin-left: 0px;
