--- a/app/modules/planinvestment/views/planinvest.html
+++ b/app/modules/planinvestment/views/planinvest.html
@@ -3,7 +3,7 @@
 	<div class="col-xs-12">
 		<div class="row">
 			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 invest-outer-cover">
-				<div class="investCover" ng-class="{'has-covered': $root.goalAnswered['invest'] == true}">
+				<div class="investCover" ng-class="{'has-covered': $root.goalAnswered['invest'] == true}" ng-click="startGoalAdd('invest')">
 					<div class="cloud1"><img src="assets/images/login_cloud1.png"></div>
 					<div class="cloud2"><img src="assets/images/login_cloud2.png"></div>
 					<div class="checkbox-cover" ng-if="$root.goalAnswered['invest']">
@@ -17,7 +17,7 @@
 					<div class="image-div">
 						<img src="assets/images/planInvestMent.png">
 					</div>	
-					<button ng-click="startGoalAdd('invest')" class="fin-app-btn fin-blue full-width">Quick Invest</button>				
+					<button class="fin-app-btn fin-blue full-width">Quick Invest</button>				
 				</div>
 				<div class="col-xs-12 desc">
 					<!-- <p class="text-center">Simply Build Wealth through monthly<span class="nextline">SIP or one-time lumpsum investment.</span></p> -->
@@ -26,7 +26,7 @@
 				</div>
 			</div>
 			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 invest-outer-cover">
-				<div class="investCover" ng-class="{'has-covered': $root.goalAnswered['tax'] == true}">
+				<div class="investCover" ng-class="{'has-covered': $root.goalAnswered['tax'] == true}"  ng-click="startGoalAdd('tax')">
 					<div class="checkbox-cover" ng-if="$root.goalAnswered['tax']">
 						<input type="radio" name>
 						<label><span></span></label>
@@ -38,7 +38,7 @@
 					<div class="image-div">
 						<img src="assets/images/saveTax.png">
 					</div>
-					<button ng-click="startGoalAdd('tax')" class="fin-app-btn fin-blue full-width">Save Tax</button>
+					<button class="fin-app-btn fin-blue full-width">Save Tax</button>
 				</div>
 				<div class="col-xs-12 desc">
 					<!-- <p class="text-center">Invest in Equity Linked Savings Schemes<span class="nextline">(ELSS) and save taxes under section</span><span class="nextline">80C.</span></p> -->
@@ -46,7 +46,7 @@
 					<h3 class="text-center"><span class="currency">&#8377</span>{{(taxAmtInvested | amountSeffix) || 0}} annual investment</h3>
 				</div>
 			</div>
-			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 invest-outer-cover">
+			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 invest-outer-cover" click-redirect="/goals" >
 				<div class="investCover" ng-class="{'has-covered': $root.finGoalAnswered == true}">
 					<div class="checkbox-cover" ng-if="$root.finGoalAnswered">
 						<input type="radio" name>
@@ -55,7 +55,7 @@
 					<div class="image-div">
 						<img src="assets/images/specifyGoals.png">
 					</div>
-					<button click-redirect="/goals" class="fin-app-btn fin-blue full-width">Plan Financial Goals</button>
+					<button class="fin-app-btn fin-blue full-width">Plan Financial Goals</button>
 				</div>
 				<div class="col-xs-12 desc">
 					<!-- <p class="text-center">Save for a financial goal like Retirement,<span class="nextline">Education, Vacation, etc.</span></p> -->
@@ -63,7 +63,7 @@
 					<h3 class="text-center"><span class="currency">&#8377</span>{{(finGoalsAmt | amountSeffix) || 0}} annual investment</h3>
 				</div>				
 			</div>
-			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 invest-outer-cover">
+			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 invest-outer-cover" ng-click="startGoalAdd('liquid')">
 				<div class="investCover" ng-class="{'has-covered': $root.goalAnswered['liquid'] == true}">
 					<div class="checkbox-cover" ng-if="$root.goalAnswered['liquid']">
 						<input type="radio" name>
@@ -73,7 +73,7 @@
 						<label><span ng-click="deleteGoal('liquid')"></span></label>
 						
 					</div>
-					<div class="image-div"  ng-click="startGoalAdd('liquid')">
+					<div class="image-div" >
 						<img src="assets/images/highInterest.png">
 						<button class="fin-app-btn fin-blue full-width">Earn Higher Interest</button>
 					</div>
