--- a/app/modules/trackperformance/views/trackPerformanceStart.html
+++ b/app/modules/trackperformance/views/trackPerformanceStart.html
@@ -12,12 +12,12 @@
 								</div>
 								<div class="money-value">
 									<h4>Current Value</h4>
-									<p><span class="currency">&#8377;</span><span class="amount">{{portfolioStatus.current_value.value}}</span></p>
+									<p><span class="currency">&#8377;</span><span class="amount">{{portfolioStatus.current_value.value | amountSeffix}}</span></p>
 								</div>
 								<div class="money-value">
 									<h4>Current Gain/Loss</h4>
 									<p class="gain types">
-									<span class="currency">&#8377;</span><span class="percentage">{{portfolioStatus.current_return | removeNegative}}</span></p>
+									<span class="currency">&#8377;</span><span class="percentage">{{(portfolioStatus.current_return | removeNegative) | amountSeffix}}</span></p>
 									<p ng-if="false" class="loss types">( <span class="currency">&#8377;</span><span class="percentage">10,200</span> )</p>
 								</div>
 							</div>
@@ -27,7 +27,7 @@
 								</div>
 								<div class="money-value">
 									<h4>Invested Value</h4>
-									<p><span class="currency">&#8377;</span><span class="amount">{{portfolioStatus.invested}}</span></p>
+									<p><span class="currency">&#8377;</span><span class="amount">{{portfolioStatus.invested | amountSeffix}}</span></p>
 								</div>
 								<div class="money-value">
 									<h4>Annualized Returns(%)</h4>
@@ -66,7 +66,7 @@
 									<p>{{data.name}}</p>
 								</div>
 								<div class="td">
-									<p><span class="currency" ng-if="(data.name != 'BSE Sensex')&&(data.name != 'NSE CNX Nifty')">&#8377;</span><span class="amount">{{data.current_value}}</span></p>
+									<p><span class="currency" ng-if="(data.name != 'BSE Sensex')&&(data.name != 'NSE CNX Nifty')">&#8377;</span><span class="amount">{{data.current_value | amountSeffix}}</span></p>
 								</div>
 								<div class="td">
 									<div class="money-value">
@@ -96,14 +96,16 @@
 				</ul>
 				<div class="chart-cover scheme-pie" ng-if="setChartValue == 'SCHEME'" custom-scroll-bar>
 					<div class="col-xs-12">
-						<div class="col-xs-12 col-lg-6 scheme-chart">
+						<div class="col-xs-12 col-lg-12 scheme-chart">
 							<div class="row">
 								<scheme-chart title="pieTitle" items="resultPercentage" colors="colors"></scheme-chart>
 							</div>
 						</div>
-						<div class="col-xs-12 col-lg-6 trackPerformanceLegendCont no-padding">
+						<div class="col-xs-12 col-lg-12 trackPerformanceLegendCont no-padding">
+
 						<div class="trackPerformanceLegends col-xs-12 no-padding">
-							<p ng-repeat="legend in legends" class="no-padding col-xs-6 no-padding"><span class="content"></span><span class="legend-cover">
+							<p ng-repeat="legend in legends" class="no-padding no-padding"><span class="content col-xs-2" ng-bind="legend.name"></span>
+
 								<span class="legend-cover">
 									<span class="legend-main" ng-style="{'background-color':legend.color,'width':(legend.value)+'%'}">
 										<span class="right"></span>
@@ -111,6 +113,7 @@
 										<span class="value" ng-bind="legend.value+' %'"></span>
 									</span>
 								</span>
+								<span class="value-cover"><span class="currency">&#8377;</span><span class="value" ng-bind="legend.price | amountSeffix"></span></span>
 							</p>
 						</div>
 						</div>
@@ -150,7 +153,7 @@
 													<p>{{scheme.holding_per}}%</p>
 												</div>
 												<div class="td">
-													<p><span class="currency">&#8377;</span><span class="amount">{{scheme.invested}}</span></p>
+													<p><span class="currency">&#8377;</span><span class="amount">{{scheme.invested | amountSeffix}}</span></p>
 												</div>
 												<div class="td">
 													<!-- <div class="money-value">
@@ -158,7 +161,7 @@
 														<span class="currency">&#8377;</span><span class="percentage">10,200</span></p>
 														<p ng-if="false" class="loss types">( <span class="currency">&#8377;</span><span class="percentage">10,200</span> )</p>
 													</div> -->
-													<p><span class="currency">&#8377;</span><span class="amount">{{scheme.current_value}}</span></p>
+													<p><span class="currency">&#8377;</span><span class="amount">{{scheme.current_value | amountSeffix}}</span></p>
 												</div>
 												<div class="td">
 													<div class="money-value">
@@ -212,18 +215,18 @@
 				</div>	
 				<div class="chart-cover finance-cover" ng-if="setChartValue == 'FINANCE'" custom-scroll-bar>
 					<div class="col-xs-12">
-						<div class="seperater" ng-repeat="finGoals in financial_goal_status">
-						<div class="row">
+						<div class="seperater" ng-repeat="finGoals in financial_goal_status"  ng-click="showFinancialGoalModal(finGoals)">
+						  <div class="row">
 							<div class="col-xs-2">
 								<div class="image-div">
 									<img ng-src="assets/images/{{getGoalImg(finGoals)}}">
 								</div>
 							</div>
 							<div class="col-lg-6 col-xs-5">
-								<p class="finance-desc" ng-click="showFinancialGoalModal(finGoals)"><span class="content">{{finGoals.name}}</span><span class="nextline placeholder addOnlyBold" ng-if="false">ON TRACK</span></p>
+								<p class="finance-desc"><span class="content">{{finGoals.name}}</span><span class="nextline placeholder addOnlyBold" ng-if="false">ON TRACK</span></p>
 							</div>
 							<div class="col-lg-4 col-xs-5">
-								<p class="target-amount"><span class="content highlight"><span class="currency">&#8377;</span><span class="content">{{finGoals.goal}}</span></span><span class="nextline placeholder">{{finGoals.dateFormatted | date:'dd/MM/yyyy'}}</span></p>
+								<p class="target-amount"><span class="content highlight"><span class="currency">&#8377;</span><span class="content">{{finGoals.returnGoal}}</span></span><span class="nextline placeholder">{{finGoals.dateFormatted | date:'dd/MM/yyyy'}}</span></p>
 							</div>
 						  </div>
 						  <div class="col-xs-12 no-padding">
