--- a/less/swiper.less
+++ b/less/swiper.less
@@ -292,7 +292,7 @@
         }
       }
       .swiper-content{
-        padding-bottom:12%;
+        padding-bottom:150px;
         padding-top:6%;
         transition:all 0.2s ease;
         min-height: 450px;
@@ -512,7 +512,7 @@
         } 
         &.content-6{
           padding:1%;
-          padding-bottom:10%;
+          padding-bottom:150px;
           width:80%;
           float:left;
           @media @below768{
@@ -560,6 +560,9 @@
             p.score{
               .GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@flamingoapprox,normal);
               .PIXEL2EM(50);            
+            }
+            ul{
+              padding-left: 5%;
             }
             p.desc{
               .GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@black,normal);
