--- a/less/trackperformance.less
+++ b/less/trackperformance.less
@@ -181,7 +181,7 @@ section{
 				.seperater{
 					width:100%;
 					float:left;
-
+					cursor: pointer;
 					padding-bottom: 48px;
 					padding-left:20px!important;
 					border-bottom:2px solid #efefef;
@@ -306,9 +306,9 @@ section{
 					}
 				}
 				.trackPerformanceLegends{
-					margin-top: 50%;
 					float: left;
 					padding: 0;
+					margin-top: 6%;
 					@media @below768{
 						margin-top: 6%;
 					}
@@ -316,21 +316,24 @@ section{
 						margin-top:6%;
 					}
 					p{
-						
+						width: 100%;
 						float: left;
 						margin-right: 0;
 					}
 					.legend-cover{
 						float: left;
-						
+						width: 34%;
+						@media @below600{
+							width: 60%;
+						}
 						span{
 							
 						}
-						width:100%;
+						
 						.legend-main{
 							height:18px;
 						    position:relative;
-							top: 6px;
+							
 							display:table;
 							float:left;
 							
@@ -378,10 +381,13 @@ section{
 					}
 					.transactionEach {
 						background-color: #e6eef4;
-					    margin: 7px 0px;
-					    padding-top: 16px;
-					    padding-left: 32px;
+					    margin: 2px 0px;
+					    padding-top: 8px;
+					    padding-left: 21px;
 					    border-radius: 19px;
+					    .table{
+					    	margin-bottom: 0
+					    }
 					}
 				}
 
